--- a/Pokemon/Pokemon.vcxproj.filters
+++ b/Pokemon/Pokemon.vcxproj.filters
@@ -20,7 +20,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="header.hpp">
+    <ClInclude Include="PokemonType.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PokemonChoice.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
