The Hidden Wilds

--- a/Pokemon/Pokemon.vcxproj.filters
+++ b/Pokemon/Pokemon.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Pokemon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WildEncounterManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PokemonType.hpp">
@@ -44,7 +47,10 @@
     <ClInclude Include="Pokemon.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="grass.hpp">
+    <ClInclude Include="Grass.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WildEncounterManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
