--- a/Pokemon/Pokemon.vcxproj
+++ b/Pokemon/Pokemon.vcxproj
@@ -131,14 +131,16 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Pokemon.cpp" />
     <ClCompile Include="Utility.cpp" />
+    <ClCompile Include="WildEncounterManager.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="grass.hpp" />
+    <ClInclude Include="Grass.hpp" />
     <ClInclude Include="Player.hpp" />
     <ClInclude Include="Pokemon.hpp" />
     <ClInclude Include="PokemonChoice.hpp" />
     <ClInclude Include="PokemonType.hpp" />
     <ClInclude Include="Utility.hpp" />
+    <ClInclude Include="WildEncounterManager.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
