--- a/Pokemon/Pokemon.vcxproj
+++ b/Pokemon/Pokemon.vcxproj
@@ -138,6 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BattleManager.hpp" />
+    <ClInclude Include="BattleState.hpp" />
     <ClInclude Include="Game.hpp" />
     <ClInclude Include="Grass.hpp" />
     <ClInclude Include="Player.hpp" />
